README dev/tech pour nouvelle version esup-sgc-client